Update _config.yml for Stanford

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Logan Cross"
 title_separator          : "-"
 name                     : &name "Logan Cross"
-description              : &description "PhD Student in Computation and Neural Systems at Caltech"
+description              : &description "Postdoc Neuro/AI - Stanford"
 url                      : https://locross93.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "locross93/locross93.github.io"
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Logan Cross"
   avatar           : "https://s.gravatar.com/avatar/33b6548018fe7dc7cb1baa061d59ddf6?s=300"
-  bio              : "PhD Student in Computation and Neural Systems at Caltech"
-  location         : "Los Angeles, CA"
+  bio              : "Postdoc Neuro/AI - Stanford"
+  location         : "Palo Alto, CA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
